erDiagram

    customer {
        int customerId PK "Unique ID for each customer"
        varchar firstName "Customer first name"
        varchar lastName "Customer last name"
        varchar email UK "Login username and contact email"
        varchar passwordHash "Hashed password, validated in Java before hashing"
        varchar phone "Contact phone number"
        varchar streetAddress "Mailing street address"
        varchar city "Mailing city"
        char state "Two-letter state code"
        varchar zipCode "ZIP code, varchar for leading zeros"
        date dateJoined "Date account was created"
    }

    boat {
        int boatId PK "Unique ID for each boat"
        int customerId FK "Owner,  references customer.customerId"
        varchar boatName "Name of the vessel"
        char regState UK "State the boat is registered in"
        varchar regNumber UK "State registration number, unique with regState"
        varchar boatType "Sailboat, powerboat, catamaran, etc"
        decimal boatLength "Length in feet, for slip fit"
        decimal boatBeam "Width in feet, for slip fit"
        int boatYear "Model year"
    }

    slipSize {
        int sizeFt PK "Slip size in feet"
    }

    waitList {
        int waitListId PK "Unique wait list entry identifier"
        int boatId FK "Boat requesting a slip"
        int sizeFt FK "Requested slip size"
        timestamp timeJoined "Time added to the wait list"
        timestamp timeClosed "Time removed from the wait list"
        varchar status "Current wait list status"
    }

    dock {
        int dockId PK "Unique identifier for the dock in the DB"
        varchar dockNumber "Customer facing dock letter, e.g. A-F"
        varchar dockDescription "A customer facing brief description of the dock"
    }

    slip {
        int slipId PK "Unique identifier for the slip in the DB"
        int slipNumber "Customer facing slip number"
        varchar slipDescription "A customer facing brief description of the slip"
        int dockId FK "The dock ID that the slip is on, links to dockID."
        varchar slipStatus "For the occupied status of the slip.  Can be an enum or predefined value"
        int sizeFt FK "An enum of (26, 40, 50), stored in feet."
    }


    reservation {
        INT reservationId PK "Unique internal identifier for the reservation"
        VARCHAR confirmationNumber "Unique confirmation number shown to the customer"
        INT boatId FK "References the boat assigned to the reservation"
        INT slipId FK "References the reserved marina slip"
        DATE startDate "Date the month-to-month lease begins"
        DECIMAL monthlyRate "Monthly rental rate at the time of reservation"
        VARCHAR reservationStatus "Current status of the reservation"
    }

    terminationNotice {
        INT terminationNoticeId PK "Unique identifier for the termination notice"
        INT reservationId FK "References the reservation being terminated"
        DATE noticeDate "Date the customer submitted the 30-day notice"
        DATE terminationDate "Date the lease is scheduled to end"
        VARCHAR noticeStatus "Current status of the termination notice"
    }

    customer ||--o{ boat : owns
    slipSize ||--o{ waitList : requestedFor
    boat ||--o{ reservation : assignedTo
    customer ||--o{ reservation : makes
    boat ||--o{ waitList : joins
    dock ||--o{ slip : has
    slip ||--o{ reservation : reservedFor
    reservation ||--o| terminationNotice : mayHave